[gd_scene load_steps=2 format=3 uid="uid://inventory"]

[ext_resource type="Script" path="res://src/ui/inventory/inventory.gd" id="1_script"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.08, 0.12, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "가방"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="ItemList" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(280, 0)
theme_override_constants/separation = 8

[node name="DetailPanel" type="PanelContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(300, 0)

[node name="Margin" type="MarginContainer" parent="VBox/HBox/DetailPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="DetailVBox" type="VBoxContainer" parent="VBox/HBox/DetailPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameLabel" type="Label" parent="VBox/HBox/DetailPanel/Margin/DetailVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "-"
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="VBox/HBox/DetailPanel/Margin/DetailVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.72, 0.68, 1)
theme_override_font_sizes/font_size = 14
text = "아이템을 선택하세요."
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="VBox/HBox/DetailPanel/Margin/DetailVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "보유: 0개"

[node name="UseButton" type="Button" parent="VBox/HBox/DetailPanel/Margin/DetailVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "사용"
disabled = true

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "돌아가기"

[node name="Toast" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.6, 0.95, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "사용 완료"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
